@@ -113,8 +113,9 @@ class OpenJPEGImage : public IIPImage {
       @param r resolution
       @param l number of quality layers to decode
       @param t tile number
+      @param e image encoding
    */
-  RawTile getTile( int x, int y, unsigned int r, int l, unsigned int t );
+  RawTile getTile( int x, int y, unsigned int r, int l, unsigned int t, ImageEncoding e = ImageEncoding::RAW );
 
 
   /// Overloaded function for returning a region from image
